# daysquare-backend

./: .gitignore  Cargo.toml
migrations/: 20210928192626_create_service.sql  20211001064305_create_data_type_tables.sql  20211001064846_create_response_tables.sql  20211001064854_create_request_tables.sql
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/domain/: query.rs  service.rs
src/error/: debug.rs
src/http/: mod.rs
src/parsers/: url.rs
src/routes/: api.rs  api_form.rs  mod.rs
src/tracelog/: logger.rs  mod.rs  request_id.rs  root_span.rs  root_span_macro.rs
tests/: health_check.rs
tests/helper/: mod.rs
